ScanExecutorPT initial commit